...
                layer.borderWidth = 2.0
                layer.borderColor = UIColor.textFieldBorderColor().cgColor
                clipsToBounds = true
                
                let fontSize = font?.pointSize ?? 10
                
                attributedPlaceholder = NSAttributedString.getAttributedString("ID", font: UIFont.systemFont(ofSize: fontSize, weight: .semibold), textColor: UIColor.lightGray)
                
                leftView = leftPaddingView
                leftViewMode = .always
                
            case .password:
                backgroundColor = UIColor.white
                layer.borderWidth = 2.0
                layer.borderColor = UIColor.textFieldBorderColor().cgColor
                clipsToBounds = true
                
                let fontSize = font?.pointSize ?? 10
                
                attributedPlaceholder = NSAttributedString.getAttributedString("Password", font: UIFont.systemFont(ofSize: fontSize, weight: .semibold), textColor: UIColor.lightGray)
                
                leftView = leftPaddingView
                leftViewMode = .always
                
            default:
                break
...
