...
            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N6N-Pc-nBC" customClass="CustomView" customModule="DemoProject" customModuleProvider="target">
                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <accessibility key="accessibilityConfiguration" label="Login Screen">
                        <bool key="isElement" value="YES"/>
                    </accessibility>
                </view>
                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="interactive" translatesAutoresizingMaskIntoConstraints="NO" id="WyJ-7I-hu9">
                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                    <subviews>
...
                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                    <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                </textField>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Q2-T4-yXO" customClass="LoginButton" customModule="DemoProject" customModuleProvider="target">
                                    <rect key="frame" x="20" y="708" width="374" height="60"/>
                                    <color key="backgroundColor" red="0.396078431372549" green="0.75686274509803919" blue="0.62352941176470589" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                    <accessibility key="accessibilityConfiguration" label="Login Button"/>
                                    <constraints>
                                        <constraint firstAttribute="height" constant="60" id="dkc-jR-JRK"/>
                                    </constraints>
                                    <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                    <state key="normal" title="LOGIN">
                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
