...
    }
    
    private func navigationBarSetup() {
        navigationController?.isNavigationBarHidden = false
        navigationItem.hidesBackButton = true
        
        let rightItem = UIBarButtonItem(title: "Logout", style: .plain, target: self, action: #selector(logoutButtonSelected))
        navigationItem.rightBarButtonItem = rightItem
    }
    
    private func loadContent() {
        
        if let strUrl = viewModel.detailsContentUrl(), !strUrl.isEmpty {
...
